--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </div>
     </footer>
 </div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.0.0/moment.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.0.0/moment.min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="scripts/weather_script.js"></script>
 	<script type="text/javascript" charset="utf-8" src="scripts/jquery.tubular.1.0.js"></script>
 	<script type="text/javascript" charset="utf-8" src="scripts/video_script.js"></script>
